--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -113,9 +113,9 @@ appointment_url = ""
 #   Set to `[]` to disable, or comment out unwanted lines with a hash `#`.
 contact_links = [
   {icon = "twitter", icon_pack = "fab", name = "DM Me", link = "https://twitter.com/anibalmastobiza"},
-  {icon = "skype", icon_pack = "fab", name = "Skype Me", link = "skype:live:.cid.d82061a633129a22call"},
-  {icon = "keybase", icon_pack = "fab", name = "Chat on Keybase", link = ""},
-  {icon = "comments", icon_pack = "fas", name = "Discuss on Forum", link = ""},
+  #{icon = "skype", icon_pack = "fab", name = "Skype Me", link = "skype:live:.cid.d82061a633129a22call"},
+  #{icon = "keybase", icon_pack = "fab", name = "Chat on Keybase", 3link = ""},
+ # {icon = "comments", icon_pack = "fas", name = "Discuss on Forum", link = ""},
   # {icon = "telegram", icon_pack = "fab", name = "Telegram Me", link = "https://telegram.me/@Telegram"},
   ]
 
